# mkdocs-example

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: gen_ref_pages.py  index.md
docs/development/: contributing.md  devenv.md
src/autogen_apidocs/: __init__.py  main.py  test.py
src/mkdocs_test/: __init__.py
